--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -2,6 +2,7 @@
 @import './components/navbar';
 @import './components/filters';
 @import './components/shapes';
+@import './components/colors';
 
 *,
 *::before,
