--- a/src/assets/sass/components/_shapes.scss
+++ b/src/assets/sass/components/_shapes.scss
@@ -24,6 +24,7 @@
       label {
         font-size: 1.5rem;
         border: 1px solid $color-gray;
+        text-transform: capitalize;
         border-radius: 20px;
         padding: 5px 10px;
         -webkit-user-select: none;
