--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -3,6 +3,7 @@
 @import './components/filters';
 @import './components/shapes';
 @import './components/colors';
+@import './components/grid';
 
 *,
 *::before,
