--- a/src/assets/sass/components/_colors.scss
+++ b/src/assets/sass/components/_colors.scss
@@ -4,10 +4,11 @@
   &-title {
     font-size: 1.6rem;
     color: $color-blue;
+    margin: 20px 0;
   }
 
   &-type {
-    margin-top: 25px;
+    margin-top: 20px;
     list-style: none;
     margin: none;
     display: flex;
